Search for all different root directories in getClassesFiles